test(filter): Add fetching tests

--- a/client/packages/filter/package.json
+++ b/client/packages/filter/package.json
@@ -9,7 +9,8 @@
     "build": "yarn build:source && yarn build:tests",
     "build:source": "tsc -p tsconfig.build.json",
     "build:tests": "tsc -p tsconfig.tests.json",
-    "storybook": "start-storybook"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.44",
