--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,11 @@
     "test": "lerna run test --concurrency=3 --stream",
     "lint": "eslint --ext .ts,.tsx packages/**"
   },
+  "config": {
+    "ghooks": {
+      "pre-commit": "cd client/ && yarn lint && yarn build && yarn test"
+    }
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
@@ -20,6 +25,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "ghooks": "^2.0.4",
     "lerna": "^3.20.2",
     "typescript": "^3.8.2"
   }
